--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </button>
           </div>
           <div class="hidden lg:flex lg:gap-x-12">
-            <a href="#" class="text-sm font-semibold leading-6 text-white">Product</a>
+            <a href="https://docs.google.com/spreadsheets/d/1wpZRA1dTIUTfxFN9AIjnF4yB3uaqMv19A9RmGdseQhA/edit#gid=0" class="text-sm font-semibold leading-6 text-white">Product</a>
             <a href="#" class="text-sm font-semibold leading-6 text-white">Features</a>
             <a href="#" class="text-sm font-semibold leading-6 text-white">Marketplace</a>
             <a href="#" class="text-sm font-semibold leading-6 text-white">People</a>
