--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
           </div>
           <div class="grid pt-20 px-6 lg:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-6">
             <div class="shadow-lg rounded-lg relative overflow-hidden group">
-              <img class="rounded-lg" src="/assets/Daniel-0776e5af.png" alt="People Section">
+              <img class="rounded-lg" src="https://images.unsplash.com/photo-1517841905240-472988babdf9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2102&q=80" alt="People Section">
               <div class="absolute bg-black bg-opacity-75 -translate-x-full rounded-lg top-0 left-0 w-full h-full flex items-center justify-center group-hover:translate-x-0 duration-300">
                 <div class="text-center">
                   <h3 class="text-white text-2xl font-bold mb-2">Daniel Pardo</h3>
