--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <div class="mx-auto max-w-2xl text-center items-center ">
               <h2 class="text-base font-semibold leading-7 text-indigo-600">Your Digital Identity</h2>
               <p class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Your Data. Your Control. Your Rewards.</p>
-              <p class="mt-6 text-lg leading-8 text-gray-600">While you keep registering your data on any platform, app, organization we control it, reuse it and make profit on it.</p>
+              <p class="mt-6 text-lg leading-8 text-gray-600">While you keep registering your data on any platform/app/organization we control it, reuse it and make it profitable.</p>
             </div>
           </div>
           <div class="mx-auto mt-16 max-w-7xl px-6 sm:mt-20 md:mt-24 lg:px-8">
